# Abstractive-Text-Summarization

./: README.md  clean_dataset (1).csv  comparison_results_4.txt  evaluate.py  human_evaluation_samples.txt  inference_bart_base.py  inference_bart_inhanced.py  job1.sh  main.py  metrics_comparison_4.csv  model.py  pyproject.toml  train.py
