[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=1.10.0",
    "transformers>=4.25.1",
    "datasets>=2.8.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.12",
    "numpy>=1.20.0",
    "tqdm>=4.64.1",
    "jupyterlab>=4.4.0",
    "jupyter>=1.1.1",
    "sentencepiece>=0.2.0",
    "nltk>=3.9.1",
]
